# market-tick-data-handler

./: .cursorignore  .gitignore  LICENSE  MANIFEST.in  README.md  REAL_VALIDATION_README.md  VALIDATION_FRAMEWORK_README.md  VALIDATION_SUMMARY.md  __init__.py  check_missing_data.py  config.py  create_aggregate_test.py  create_full_aggregate.py  demo_streaming_simple.py  demo_unified_streaming.py  env.example  install.sh  pyproject.toml  pytest.ini  pytest_simple.ini  real_validation.py  regenerate_aggregate_file.py  regenerate_aggregate_simple.py  requirements.txt  run_binance_e2e_test.py  run_fixed_local_instrument_generation.py  run_missing_data_report.py  run_missing_data_workflow.py  run_validation_tests.py  setup.sh  setup_real_validation.py  streaming.env.example  streaming.yaml  tardis_schema.md  test_pytest_simple.py  test_real_validation.py  test_simple.py  test_validation_standalone.py  three_rules_validation.py
docker/: BUILD_INSTRUCTIONS.md
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTHENTICATION_STRATEGY.md  BIGQUERY_FORMAT_STANDARDIZATION.md  BIGQUERY_OPTIMIZATION_UPDATE.md  BUDGET_ANALYSIS.md  COMPLETE_DATA_ARCHITECTURE.md  CONFIG_USAGE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DERIBIT_OPTIONS_COMPLETE_SOLUTION.md  DEVELOPER_SETUP.md  DOWNSTREAM_USAGE.md  ENHANCED_UTILITIES.md  FILE_REORGANIZATION_SUMMARY.md  HFT_FEATURES_SPECIFICATION.md  INSTRUMENT_KEY.md  MAIN_USAGE.md  OPTIMIZED_SINGLE_PARTITION_STRATEGY.md  ORCHESTRATOR_ELIMINATION_SUMMARY.md  ORGANIZED_STRUCTURE.md  PACKAGE_INSTALLATION.md  PACKAGE_USAGE.md  PARQUET_OPTIMIZATION_STRATEGY.md  PERFORMANCE_RESULTS.md  QUICK_REFERENCE.md  README_CLEAN.md  SCRIPTS_CLEANUP_SUMMARY.md  SECRET_MANAGER_SETUP.md  SETUP_GUIDE.md  SINGLE_PARTITION_IMPLEMENTATION_SUMMARY.md  STREAMING_ARCHITECTURE.md  STREAMING_IMPLEMENTATION_STATUS.md  STREAMING_INTEGRATION_SUMMARY.md  STREAMING_SERVICE_GUIDE.md  STREAMING_VALIDATION_INTEGRATION.md  STREAMING_WALKTHROUGH.md  TESTING_ANALYSIS.md  TWO_PHASE_OPTIMIZATION_DIAGRAM.md  UNIFIED_STREAMING_TECH_SPEC.md  UNIVERSAL_PARTITIONING_STRATEGY.md  (+7 more)
examples/: CLEANUP_PLAN.md  README.md  authentication_examples.py  compare_binance_vs_tardis.py  demo_single_instrument.py  inspect_instrument.py  integration_example.py  list_instruments.py  list_tick_data.py  live_streaming_processor.py  live_streaming_usage_guide.py  package_usage_examples.py  parquet_performance_results.md  performance_comparison_test.py  production_candle_processor.py  secret_manager_example.py  simple_parquet_test.py  single_instrument_processor.py  streaming_batch_example.py  tardis_lookup_example.py  test_e2e_binance_pipeline.py  validate_aggregation_consistency.py  validate_timestamp_stability.py
issues/: 001-tardis-data-type-mapping.md  002-incomplete-hft-features.md  003-missing-data-types-live-stream.md  004-live-ccxt-instrument-definitions.md  005-candle-buffering-strategy.md  006-advanced-order-detection-hft-features.md  007-daily-download-pipeline-backfill-testing.md  008-historical-candle-buffer-startup.md  009-streaming-architecture-consolidation.md  docker-credential-issue.md  missing-data-types-download.md
market_data_tick_handler/: __init__.py  __main__.py  config.py  main.py  models.py
scripts/: manage-secrets.py  pre_deploy_check.sh.bak  restore-credentials.sh  setup-auth.sh  setup-dev.sh  setup-secret-manager.sh
src/: main.py  models.py
streaming/: Dockerfile  live_tick_streamer.js
tests/: README.md  (+22 more)
(+157 files in other folders)
