[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-tick-handler"
version = "2.0.0"
description = "Comprehensive market data tick handler for cryptocurrency trading data"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Market Data Team", email = "market-data@yourcompany.com"}
]
maintainers = [
    {name = "Market Data Team", email = "market-data@yourcompany.com"}
]
keywords = ["market-data", "cryptocurrency", "trading", "tick-data", "candles", "hft-features", "bigquery", "gcs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "google-cloud-storage>=2.7.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-logging>=3.8.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyarrow>=10.0.0",
    "fastparquet>=0.8.0",
    "pydantic>=1.10.0",
    "structlog>=22.0.0",
    "tenacity>=8.0.0",
    "tardis-dev>=0.1.0",
    "zstandard>=0.22.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "websockets>=12.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]
streaming = [
    "nodejs>=0.1.1",
]
all = [
    "market-data-tick-handler[dev,streaming]",
]

[project.urls]
Homepage = "https://github.com/iggyikenna/market-tick-data-handler"
Documentation = "https://github.com/iggyikenna/market-tick-data-handler/tree/main/docs"
Repository = "https://github.com/iggyikenna/market-tick-data-handler"
Issues = "https://github.com/yourusername/market-tick-data-handler/issues"

[project.scripts]
market-data-handler = "market_data_tick_handler.main:main"

[tool.setuptools]
packages = ["market_data_tick_handler"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
